--- a/DMTViewer/packages.config
+++ b/DMTViewer/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Mono.Cecil" version="0.9.6.4" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
+  <package id="Octokit" version="0.32.0" targetFramework="net461" />
 </packages>
