--- a/DMTViewer/packages.config
+++ b/DMTViewer/packages.config
@@ -1,7 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Lib.Harmony" version="2.0.1" targetFramework="net461" />
-  <package id="Mono.Cecil" version="0.9.6.4" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
+  <package id="Lib.Harmony" version="2.0.2" targetFramework="net4" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="3.0.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.Common" version="3.7.0" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="3.7.0" targetFramework="net461" />
+  <package id="Mono.Cecil" version="0.11.2" targetFramework="net4" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net4" />
   <package id="Octokit" version="0.32.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
+  <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net461" />
+  <package id="System.Text.Encoding.CodePages" version="4.5.1" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net461" />
 </packages>
