UpdateMover (zip as github won't host the exe)

--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,4 @@ __pycache__/
 *.pyc
 /DMTViewer/UnityResources/Unity.2018.2.0
 /DMTViewer/UnityResources/Unity.2019.1.0
+/DMTViewer/UnityResources/Unity.2019.2.17
